# ivc-checkpoints

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
bench/: Cargo.toml
bench/src/: main.rs
contracts/: foundry.toml
contracts/lib/forge-std/.github/workflows/: ci.yml
contracts/lib/forge-std/src/: Vm.sol
contracts/lib/forge-std/test/: Vm.t.sol
contracts/src/: PoseidonT5.sol  ProvenCheckpoint.sol  ProvenCheckpointNewline.sol
contracts/src/interfaces/: IDeciderVerifier.sol  IOpaqueDecider.sol
contracts/test/: Gas.t.sol  PoseidonNewline.t.sol  PoseidonT5.t.sol  ProvenCheckpoint.t.sol  ProvenCheckpointNewline.t.sol
crates/ledger-circuit/: Cargo.toml
crates/ledger-circuit-newline/: Cargo.toml  README.md
crates/ledger-circuit-newline/src/: config.rs  lib.rs  schnorr.rs
crates/ledger-circuit-newline/src/sparsemt/: constraints.rs  mod.rs
crates/ledger-circuit/src/: imt.rs  lib.rs  native.rs  ops.rs  poseidon.rs
crates/ledger-circuit/tests/: constraints.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  poseidon_codegen.rs  workload.rs
docs/: BUILD_PLAN_A0_A1.md  CEREMONY_AND_AUDIT.md  DECENTRALIZATION.md  DECIDER_RESULTS.md  HANDOFF.md  REPORT.md  TASK_provencheckpoint_newline_rewire.md  TRUST_MODEL.md  USE_CASES.md
results/: README.md  comparison.md  forge_gas.json  measured.json  prover.json
script/: compare_to_model.py
