# newline-port branch: the ledger circuit ported to the NEW (audited) sonobe line
# (sonobe-primitives @ 243391e / revamp-decider, crates.io arkworks 0.6, gr1cs).
# NOTE: this branch deliberately diverges from `main` (the classic prototype). The classic
# arkworks-0.5 crates + vendor/ are excluded here (they use a [patch] incompatible with 0.6).
# No vendoring/patches needed on the new line — arkworks 0.6 is on crates.io.
[workspace]
resolver = "2"
members = ["crates/ledger-circuit-newline"]
exclude = ["crates/ledger-circuit", "crates/prover", "bench", "vendor"]

[profile.release]
opt-level = 3
