[package]
name = "ledger-circuit-newline"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
description = "Phase-1 port of the ledger F-circuit to the new (audited) sonobe line (arkworks 0.6, gr1cs)"

[dependencies]
sonobe-primitives = { git = "https://github.com/privacy-ethereum/sonobe", rev = "243391ebc14ad993f425802eb9dbaf44fdd54436" }
ark-bn254 = { version = "0.6.0", features = ["curve", "r1cs"] }
ark-grumpkin = { version = "0.6.0", features = ["r1cs"] }
ark-ec = "0.6.0"
ark-ff = "0.6.0"
ark-std = "0.6.0"
ark-relations = "0.6.0"
ark-r1cs-std = "0.6.0"
ark-crypto-primitives = { version = "0.6.0", features = ["constraints", "sponge", "crh", "merkle_tree"] }
sonobe-ivc = { git = "https://github.com/privacy-ethereum/sonobe", rev = "243391ebc14ad993f425802eb9dbaf44fdd54436", optional = true }

[features]
# Pulls the new-line decider crate to implement FCircuitEVMExt (state -> on-chain uint256[3]),
# making LedgerCircuit renderable by the LegoGroth16 decider verifier template. Heavy (revm/askama)
# and requires rustc >= 1.91 (revm); off by default so the circuit + unit tests stay light.
evm = ["dep:sonobe-ivc"]
