[package]
name = "prover"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Epoch prover: stream ops, fold with Nova+CycleFold, produce the DeciderEth proof and generate the on-chain verifier + calldata"

[dependencies]
ledger-circuit = { path = "../ledger-circuit" }
folding-schemes = { workspace = true }
solidity-verifiers = { workspace = true }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-groth16 = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "sponge"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
sha3 = { workspace = true }

[features]
default = []
# Shrinks the DeciderEthCircuit (skips the multi-million-constraint Pedersen checks) so
# fold -> decider -> on-chain verify runs on modest hardware / CI. NOT sound for
# production: the emitted verifier corresponds to the reduced circuit. See README.
light-test = ["folding-schemes/light-test"]

[[bin]]
name = "prove_epoch"
path = "src/bin/prove_epoch.rs"

[[bin]]
name = "gen_poseidon"
path = "src/bin/gen_poseidon.rs"
